tests/paczka1/small_fuzzy/63019603.err
Error in line 5: 5u9EMYKyFqZ S418 93,8
Error in line 3: dBg9U S856 55,6
